   clear one which isn't set), similar to @set. Suggested by Paige. [MG]
 * Sorting methods now take - as a prefix to sort type in order to sort
   in descending order. Suggested by Minion. [GM]
 * The matching code no longer matches players who aren't nearby with
   "*playername" when MAT_NEAR is given, more in line with other checks.
   (This has virtually no impact for most players.) [MG]

Commands:
 * Add /preserve switch to @chzone and @chzoneall, like @chown/preserve.
 * Rooms/exits must now have an @COST attribute in order to be given
   pennies. Use @cost <ancestor>=%0 to enable giving to all rooms/exits. [MG]
 * with/room can now check for commands in the Master Room or your ZMR, and
   with can check for commands on your ZMT. [MG]
 * @sitelock/register <host> now sets the access rules for <host> to be
   "!create register", rather than "!create". Suggested by Trinsec. [MG]
   
Functions:
 * remit() now works like @remit/list. Suggested by Minion. [MG]

Fixes:
 * Help fixes.
 * @search's output can now include garbage objects, like lsearch().
   Reported by Minion. [MG]
 * The command parser incorrectly expanded the names of disabled built-in
   commands prior to $-command matching. Reported by Mercutio. [MG]
 * benchmark()'s average would be thrown off when the CPU limit was 
   exceeded during evaluation. Reported by Amberyl. [MG]
 * Fix a few bugs in handling of command locks. [SW]
 * Garbage objects could be matched by dbref. Reported by Paige. [MG]
 * No longer complain about reboot.db not being present when we're not
   doing a @shutdown/reboot anyway. Reported by Paige. [MG]
 * The Telnet escape code was not properly escaped when sent literally to
   Pueblo-aware clients. [MG]
 * namelist() did not accept names in quotes. Reported by Amberyl. [MG]
 * @attrib/access/retroactive could remove the 'root' flag from attribute
   trees, making nasty things happen. Reported by Cooee. [MG]